# arduino-cmake

./: CMakeLists.txt  README.md
cmake/: ArduinoToolchain.cmake
cmake/Platform/: Arduino.cmake
cmake/Tools/: reset.py
example/: CMakeLists.txt
